# Underground-City

./: .gitattributes  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: api-tests.yml  deploy-release.yml  run-tests.yml
app/: Dockerfile  requirements.txt  setup.py
app/assistant/: environment.py  model_helper.py
app/config/: __init__.py  swagger_setup.py
app/db/: db_connection.py  testing_connection.py
app/endpoints/: attributes.py  categories.py  product.py  products.py  supermarkets.py  zinitiate.py
app/generators/: db-generator.py  db_generator.py
app/handler/: lambda_handler.py
app/model/: account.py  account_post.py  attribute.py  attribute_product_pair.py  category.py  product.py  product_nutrition.py  products.py  supermarket.py  supermarket_category_pair.py  supermarket_product_pair.py
app/tests/: aldi.html  test_scraper.py
app/utils/: another_scrape.py  initiate_driver.py  origin_scrape.py  sainsburys.html  scrape_utils.py
database-seed/: 1.inserts.products.sql  1.inserts.supermarket.sql  generate.sh  seed.sql
openapi/: openapi.yaml  openapi.yml
openapi/paths/: attributes.yaml  attributes.yml  products.yaml  supermarkets.yaml
openapi/schemas/: attribute.yaml  category.yaml  product.yaml  supermarket.yaml
postman/: collection.json
terraform/: main.tf  output.tf  variables.tf
terraform/api_gateway/: api_gateway.tf  domain.tf  iam.tf  output.tf  variables.tf
terraform/lambda/: iam.tf  lambda.tf  output.tf  security_group.tf  variables.tf
terraform/networking/: output.tf  (+3 more)
(+40 files in other folders)
